tests/valid/loops/return_in_while.rs
/*
return: 2
*/

main(): int {
    while (1) {
        return 2;
    }
}