tests/invalid/loops/out_of_scope.rs
/*
fail: 1
*/

main(): int {

    while (1) {
        a: int = 2;
    }

    return a;
}